--- a/index.html
+++ b/index.html
@@ -1473,6 +1473,11 @@
             <div>Media Player</div>
             <div class="start-app-sub">Open any media</div>
           </div>
+          <div class="start-app" data-app="taskmgr" data-app-name="taskmgr">
+            <div class="start-app-icon" style="background:linear-gradient(135deg,#ff7ad9,#b400ff);"></div>
+            <div>Task Manager</div>
+            <div class="start-app-sub">Monitor apps & performance</div>
+          </div>
         </div>
       </div>
       <div class="start-right-panel">
